--- a/app/views/supplies/show.erb
+++ b/app/views/supplies/show.erb
@@ -18,4 +18,5 @@
 
 
 <a href="/supplies/<%= @supply.id %>/edit"><input type="submit" value="Edit this Supply"></a>
-    
+
+<a href="/users/dashboard/<%= @user.id %>"><input type="submit" value="Back to Dashboard"></a>
