--- a/app/views/projects/new.erb
+++ b/app/views/projects/new.erb
@@ -1,3 +1,74 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+#supplies, #projects {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#supplies td, #projects th {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+#supplies, #projects tr:nth-child(even){background-color: #f2f2f2;}
+
+#supplies tr:hover {background-color: #ddd;}
+
+#supplies th {
+  padding-top: 24px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #4CAF50;
+  color: white;
+}
+
+#projects th {
+  padding-top: 24px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #4c97af;
+  color: white;
+}
+
+#projects td {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  background-color: #def0f2;
+  color: black;
+}
+
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#navbar th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #bdddaa;
+  color: white;
+}
+
+
+</style>
+</head>
+
+<table id="navbar">
+  <tr>
+    <th><a href="/users/dashboard/<%= @user.id %>">Dashboard</a>
+    <th><a a href="/users/logout">Log Out</a></th>
+  </tr>
+  </table>
+
+<br>
+<br>
+
 <h1>Create a new project</h1>
 <form action="/projects" method="post">
 
@@ -24,6 +95,6 @@
   <br>
   <input type="submit" value="Create Project">
 
-
-
 </form>
+
+</body>
