finished nav bars, fixed supply create so users can't create supplies with same name, different case

--- a/app/views/projects/edit.erb
+++ b/app/views/projects/edit.erb
@@ -63,7 +63,7 @@
 
   <table id="navbar">
     <tr>
-      <th><a href="/users/dashboard/<%= @user.id %>">Dashboard</a>
+      <th><a href="/users/dashboard/<%= @user.id %>">Dashboard</a></th>
       <th><a a href="/users/logout">Log Out</a></th>
     </tr>
     </table>
