--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,35 @@
-<div class="container">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#navbar th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #469ad6;
+  color: white;
+}
+
+
+</style>
+</head>
+<body>
+
+  <table id="navbar">
+    <tr>
+      <th></th>
+      <th></th>
+    </tr>
+  </table>
+
+<br><div class="container">
   <header></header>
 
 
@@ -26,3 +57,4 @@
     <a href="users/signup">Don't have an account? You can create a free one here.</a>
 
   </form>
+  </body>
