--- a/app/views/supplies/new.erb
+++ b/app/views/supplies/new.erb
@@ -1,3 +1,37 @@
+<<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#navbar th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #469ad6;
+  color: white;
+}
+
+
+</style>
+</head>
+<body>
+<table id="navbar">
+  <tr>
+    <th><a href="/users/dashboard/<%= @user.id %>">Dashboard</a>
+    <th><a a href="/users/logout">Log Out</a></th>
+  </tr>
+  </table>
+
+<br>
+
+
+
 <h1>Create a new supply</h1>
 <form action="/supplies" method="post">
 
@@ -26,3 +60,5 @@
     <input type="submit" value="Create this Supply">
 
 </form>
+
+</body>
