--- a/app/views/users/error.erb
+++ b/app/views/users/error.erb
@@ -1,3 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#navbar th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #469ad6;
+  color: white;
+}
+
+
+</style>
+</head>
+<body>
+
+  <table id="navbar">
+    <tr>
+      <th></th>
+      <th></th>
+    </tr>
+  </table>
+
+<br>
+
 <h2>Something went wrong ...</h2>
 
 <h3>Please click a link to try again</h3>
