--- a/app/views/users/goodbye.erb
+++ b/app/views/users/goodbye.erb
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
+<html>
+<head>
+<style>
+
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#navbar th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #469ad6;
+  color: white;
+}
+
+
+</style>
+</head>
+<body>
+
+  <table id="navbar">
+    <tr>
+      <th></th>
+      <th></th>
+    </tr>
+  </table>
+
+<br>
+
   <body>
     </html><h1>Thanks for visiting! Please come back soon!</h1>
     <br>
