--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,3 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#navbar th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #469ad6;
+  color: white;
+}
+
+
+</style>
+</head>
+<body>
+
+  <table id="navbar">
+    <tr>
+      <th></th>
+      <th></th>
+    </tr>
+  </table>
+
+<br>
+
 <h4>So many events, so many supplies, so little time...</h4>
 <br>
 
@@ -19,3 +52,5 @@
   <input type="submit" id="sign me up" value="Sign Me Up!">
 
 </form>
+
+</end>
