--- a/app/views/supplies/show.erb
+++ b/app/views/supplies/show.erb
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -13,7 +13,7 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #469ad6;
+  background-color: #bdddaa;
   color: white;
 }
 
@@ -47,7 +47,7 @@
 <h3>Price per unit: <%= @supply.price_per_unit %></h3>
 <br>
 
-<h3>Units needed: <%= @supply.units_needed %></h3>
+
 
 
 <a href="/supplies/<%= @supply.id %>/edit"><input type="submit" value="Edit this Supply"></a>
