--- a/app/views/supplies/edit.erb
+++ b/app/views/supplies/edit.erb
@@ -1,26 +1,4 @@
-<<!DOCTYPE html>
-<html>
-<head>
-<style>
 
-#navbar {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#navbar th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: center;
-  background-color: #469ad6;
-  color: white;
-}
-
-
-</style>
-</head>
-<body>
 <table id="navbar">
   <tr>
     <th><a href="/users/dashboard/<%= @user.id %>">Dashboard</a>
@@ -28,10 +6,7 @@
   </tr>
   </table>
 
-<br>
-
-
-h2>Edit your list of supplies</h2>
+<h2>Edit your list of supplies</h2>
 
 
 <form action="/supplies/<%=@supply.id%>" method="post">
