--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,14 +1,13 @@
-  #navbar {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
 
-  #navbar th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #4c97af;
-    color: white;
-  }
-
+#navbar th {
+  padding-top: 18px;
+  padding-bottom: 18px;
+  text-align: center;
+  background-color: #bdddaa;
+  color: white;
+}
