fixed style of projects show page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,12 +13,14 @@
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="stylesheet" href="/stylesheets/navbar.css" />
+    <link rel="stylesheet" href="/stylesheets/dashboard.css" />
+
   </head>
   <body>
     <div class="wrapper">
 
 
-    
+
         <%= yield %>
 
       <footer class="branding">
