--- a/app/views/supplies/show.erb
+++ b/app/views/supplies/show.erb
@@ -26,7 +26,7 @@
 
 
 
-
 <a href="/supplies/<%= @supply.id %>/edit"><input type="submit" value="Edit this Supply"></a>
+<br>
 
-</body>
+<a href="/supplies/<%= @supply.id %>/delete"><input type="submit" value="Delete this Supply"></a>
