can now delete project

--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -15,11 +15,10 @@
 <br>
 <a href="/projects/<%= @project.id %>/edit"
   "><input type="submit" value= "Update Project"></a>
-  <form  action="/projects/<%= @project.id %>" method="delete">
 
-  </form>
-  <a href="/projects/<%= @project.id %>/edit"
-    "><input type="submit" value= "Delete Project"></a>
+<a href="/projects/<%= @project.id %>/delete"
+  "><input type="submit" value= "Delete Project"></a>
+
 <br>
 <br>
 
