deleted create new supplies page/ supplies are created in supplies/assign view

--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -47,7 +47,7 @@
 -->
 
 <form action="/supplies/assign/<%=@project.id%>" method="get">
-  <input type="submit" value= "Update Supplies">
+  <input type="submit" value= "Create or update Supplies">
 </form>
 <br>
 <table id="supplies">
