--- a/app/views/supplies/assign.erb
+++ b/app/views/supplies/assign.erb
@@ -52,6 +52,7 @@
   <br>
 
   <h4> or, create some new supplies:</h4>
+  <p>You can edit these new supplies later, in your <a href="/users/dashboard/<%= @user.id %>">dashboard</a></p>
 <br>
   <input type="string"  name="user[project_ids][supplies][]">
   <br>
