trying to fix buttons

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,8 @@
 
 
+</style>
 
-    <h3>hello busy people ... :)</h3>
+  <h3>hello busy people ... :)</h3>
 
 
 
@@ -16,8 +17,7 @@
 
     <input type="text" placeholder="your email" name="email" required>
     <input type="password" name="password" placeholder="password" required>
-
-    <input type="submit" value="Log In">
+    <button class="button" style="vertical-align:middle"><span>Log In </span></button>
     <br>
     <br>
     <br>
@@ -25,4 +25,3 @@
     <a href="users/signup">Don't have an account? You can create a free one here.</a>
 
   </form>
-  
