--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="stylesheet" href="/stylesheets/navbar.css" />
     <link rel="stylesheet" href="/stylesheets/dashboard.css" />
+    <link rel="stylesheet" href="/stylesheets/button.css" />
 
   </head>
   <body>
