--- a/app/views/supplies/edit.erb
+++ b/app/views/supplies/edit.erb
@@ -21,29 +21,26 @@
     <h4><%= @supply.vendor %></h4>
     <input type="string" name="vendor" id="vendor" placeholder="update vendor name">
     <br>
-
+    <br>
     <h3><label for="website">Website:</label></h3>
     <h4><%= @supply.website %></h4>
     <input type="string" name="website" id="website"placeholder="update website">
     <br>
-
+    <br>
     <h3><label for="unit type">Unit type:</label></h3>
     <h4><%= @supply.unit_type %></h4>
     <input type="string" name="unit_type" id="unit type"placeholder="update unit type">
     <br>
+    <br>
 
     <h3><label for="price per unit">Price per unit:</label></h3>
     <h4><%= @supply.price_per_unit %></h4>
-      <input type="number" min="0.00" max="10000.00" step="0.01" name="price_per_unit" id="price per unit" placeholder="update price">
-    <br>
-
-    <h3><label for="units needed">Units needed:</label></h3>
-    <h4><%= @supply.units_needed %></h4>
-    <input type="integer" name="units_needed" id="units needed" placeholder="update units needed">
+    <input type="number" min="0.00" max="10000.00" step="0.01" name="price_per_unit" id="price per unit" placeholder="update price">
     <br>
     <br>
-
-    <input type="submit" placeholder="Update">
+    <br>
+    <h3>Changes look good? Click the button below:</h3>
+    <input type="submit" value="Update Supply">
 
   <br>
   <br>
