project find_or_create - fixed another bug - should be completely working now

--- a/app/views/users/dashboard.erb
+++ b/app/views/users/dashboard.erb
@@ -12,7 +12,7 @@
 <br>
 
 <h2>Welcome to your dashboard, <%=@user.name%>!</h2>
-<p>Click on any project for more information</p>
+<p>Click on any project for more information. If you don't see any, create one!</p>
 
 <br>
 <h1>My Projects</h1>
@@ -39,7 +39,7 @@
   <br>
   <br>
 
-  <h1>My Supplies</h1>
+  <h1>Supplies for this project</h1>
   <br>
 
     <% @user.projects.each do |project| %>
